--- a/scopus_cvs_pyplot.ipynb
+++ b/scopus_cvs_pyplot.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "scopus_cvs_pyplot.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNiwTXb5fitamjo/4l+3mIk",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPsX9+jH7Pn/m36fGZGu95O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +41,7 @@
         "\n",
         "from matplotlib.pyplot import *\n",
         "from matplotlib import dates\n",
-        "from scipy import *\n",
+        "from numpy import *\n",
         "import csv\n",
         "import itertools as its\n",
         "rcParams['font.size']=16\n",
