Use path to github repo

--- a/scopus_cvs_pyplot.ipynb
+++ b/scopus_cvs_pyplot.ipynb
@@ -6,7 +6,7 @@
       "name": "scopus_cvs_pyplot.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPsX9+jH7Pn/m36fGZGu95O",
+      "authorship_tag": "ABX9TyPnGInZEPi3i/4rpZQp25qi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,9 +53,12 @@
         "    data = data.T\n",
         "    return data\n",
         "\n",
-        "data1 = read_cvs_file('Scopus-allAuthors-Analyze-Year.csv')\n",
-        "data2 = read_cvs_file('Scopus-noTOMIteam-Analyze-Year.csv')\n",
-        "data3 = read_cvs_file('Scopus-integrated-Analyze-Year.csv')\n",
+        "github_path = 'https://raw.githubusercontent.com/kai-neuhaus/scopus_cvs_pyplot/master/'\n",
+        "# data_path = '/Users/kai/data'\n",
+        "path = github_path # please change to your data path\n",
+        "data1 = read_cvs_file(path+'Scopus-allAuthors-Analyze-Year.csv')\n",
+        "data2 = read_cvs_file(path+'Scopus-noTOMIteam-Analyze-Year.csv')\n",
+        "data3 = read_cvs_file(path+'Scopus-integrated-Analyze-Year.csv')\n",
         "\n",
         "\n",
         "bar(data3[0],data3[1],label='AND integrated')\n",
